# midi-manager/src/main/java/com/example/springbootapp/model/Food.java
@@ -1,7 +1,0 @@
-package com.example.springbootapp.model;
-
-import java.math.BigDecimal;
-import java.util.UUID;
-
-public record Food(UUID id, String name, BigDecimal rating) {
-}
